<resources>
    <string name="app_name">TILT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="weekly_readings">Lecture de la semaine</string>

    <string name="action_settings">Settings</string>
    <string name="who_pray_for">Prières de la semaine</string>
    <string name="what_is_gdc">GDC : c\'est quoi ?</string>
    <string name="what_is_gdm">GDM :  c\'est quoi ?</string>
    <string name="communicate">Communiquer</string>
    <string name="share">Partager</string>
    <string name="send">Envoyer</string>
</resources>
