<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/weekly_readings"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/weekly_readings" />
        <item
            android:id="@+id/who_pray_for"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/who_pray_for" />
        <item
            android:id="@+id/what_is_gdc"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/what_is_gdc" />
        <item
            android:id="@+id/what_is_gdm"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/what_is_gdm" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
